[gd_scene load_steps=6 format=3 uid="uid://doxg5oq0lgpo2"]

[ext_resource type="Script" path="res://NPCs/Falisz.gd" id="1_e7de4"]
[ext_resource type="Texture2D" uid="uid://dc5e6mndxypwy" path="res://assets/characters/Falisz.png" id="2_b34lu"]
[ext_resource type="PackedScene" uid="uid://dr4xh7g0ik0yx" path="res://dialogue/dialogue.tscn" id="3_1lpws"]

[sub_resource type="CircleShape2D" id="CircleShape2D_t0wmm"]

[sub_resource type="CircleShape2D" id="CircleShape2D_a43o3"]

[node name="Falisz" type="Area2D"]
script = ExtResource("1_e7de4")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_b34lu")

[node name="chat_detection_area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="chat_detection_area"]
shape = SubResource("CircleShape2D_t0wmm")

[node name="Dialogue" parent="chat_detection_area" instance=ExtResource("3_1lpws")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_a43o3")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_entered" from="chat_detection_area" to="." method="_on_chat_detection_area_body_entered"]
[connection signal="body_exited" from="chat_detection_area" to="." method="_on_chat_detection_area_body_exited"]
